--- a/OneDrive/Desktop/Project UAS Katherin Monica 422023011/loginUAS.css
+++ b/OneDrive/Desktop/Project UAS Katherin Monica 422023011/loginUAS.css
@@ -29,7 +29,8 @@ li{font-size: 16px;
 
 @media only screen and (max-width:500px)
 { .mobile { display:block; }
-  .dekstop {display: none;}
+  .dekstop {display: none;
+  					max-width: 100%}
   .dekstop.mobile{ display: block; } 
   }
 		body{color: purple;
@@ -47,7 +48,7 @@ li{font-size: 16px;
 			font-family:Raleway ;}
 		h3{
 	font-family:Raleway ;
-	color: black;
+	color: gold;
 	font-size: 1.8rem;
 }
 		:root {--text-color: pink;
@@ -110,7 +111,7 @@ li{font-size: 16px;
 		.follow a:hover { color:var(--main-color);
 						  padding-right: 10px; }
 		.home-text{
-								background-image: url(https://thebiaslistcom.files.wordpress.com/2023/03/twice-set-me-free.jpg?w=640) ;
+								background-image: url(https://pbs.twimg.com/media/FpaycEfaEAA4Vlr.jpg:large) ;
 			background-size: cover;
 			background-position: center;
       background-repeat: no-repeat;
@@ -121,22 +122,14 @@ section{padding: 90px 20px 30px;}
 
 
 div.gallery {
-  margin: 5px;
+  margin: 10px;
+  padding-right: 15px;
   border: 1px solid #ccc;
   float: left;
   width: 180px;
   align-items: center;
-  margin-left: 45px;
+  margin-left: 50px;
   margin-top: 10px;
-}
-div.gallery2 {
-  margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 180px;
-  align-items: center;
-  margin-left: 90px;
-  margin-top: 40px;
 }
 
 div.gallery:hover {
@@ -147,11 +140,7 @@ div.gallery2:hover {
 }
 
 div.gallery img {
-  width: 100%;
-  height: 200px;
-}
-div.gallery2 img {
-  width: 100%;
+  width: 108%;
   height: 200px;
 }
 
@@ -177,4 +166,14 @@ div.desc {
 tombol:hover { align-content: center;
   box-shadow: 0px 1px 2px #24c64f;
   transform: translateY(10px);
+}
+
+i {
+    margin: 5px;
+    color: #FFE10E;
+}
+
+.footer {
+  flex-shrink: none;
+  padding-top: 100px;
 }
